# OpenGuardian

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirement.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-infrastructure-foundation/: 01-CONTEXT.md
.planning/research/: SUMMARY.md  architecture-deployment.md  dns-behavior-monitoring.md  llm-analysis.md  stack-graph-pihole.md
dashboard/: package.json  pnpm-lock.yaml
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: header.tsx  mobile-nav.tsx  sidebar.tsx
dashboard/src/components/dashboard/: activity-cards.tsx  activity-chart.tsx  ai-summary.tsx  baseline-comparison.tsx  behavior-score.tsx  data-sources.tsx  (+1 more)
dashboard/src/lib/: mock-data.ts
known-risks/: risk_grooming_roblox.md
scripts/: test_poc.py
src/openguardian/: main.py
src/openguardian/analysis/: detector.py  loop.py  risk_loader.py  summarizer.py
src/openguardian/api/: app.py  dependencies.py
src/openguardian/categorization/: categories.db  category_map.py
src/openguardian/config/: settings.py
src/openguardian/connectors/: manifest.py  protocol.py  registry.py
src/openguardian/db/: client.py  migrations.py  repository.py
src/openguardian/graph/: sessions.py
src/openguardian/ingestion/: loop.py
src/openguardian/llm/: provider.py
src/openguardian/models/: graph_event.py
src/openguardian/notifications/: email.py  router.py
src/openguardian/privacy/: hashing.py
(+12 files in other folders)
